# SmartAdBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.py
core/handlers/: sender.py  start.py
core/keyboards/: inline.py
core/middlewares/: user_collector.py
core/utils/: sender_state.py
database/: models.py  queries.py
tests/: conftest.py  test_database.py
