[project]
name = "sender-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "gewoggewog",email = "gewoggewog@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram[all] (>=3.22.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

